--- a/lecture/lecture.ipynb
+++ b/lecture/lecture.ipynb
@@ -1455,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -1463,6 +1463,7 @@
     {
      "data": {
       "text/html": [
+       "\n",
        "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
        "<link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic' rel='stylesheet' type='text/css'>\n",
        "<link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>\n",
@@ -1483,12 +1484,12 @@
        "\n",
        "\n",
        "div.cell { /* set cell width to about 80 chars */\n",
-       "    width: 800px;\n",
+       "    width: 1000px;\n",
        "}\n",
        "\n",
        "div #notebook { /* centre the content */\n",
        "    background: #fff; /* white background for content */\n",
-       "    width: 1000px;\n",
+       "    width: 1200px;\n",
        "    margin: auto;\n",
        "    padding-left: 1em;\n",
        "}\n",
@@ -1514,7 +1515,7 @@
        "    font-family: 'Arvo' sans-serif;\n",
        "    line-height: 130%;\n",
        "    font-size: 150%;\n",
-       "    width:700px;\n",
+       "    width:900px;\n",
        "    margin-left:auto;\n",
        "    margin-right:auto;\n",
        "}\n",
@@ -1585,13 +1586,14 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "HTML(open('material/msc/custom.css', 'r').read()) "
+    "import urllib; from IPython.core.display import HTML\n",
+    "HTML(urllib.urlopen('http://bit.ly/1OKmNHN').read())"
    ]
   }
  ],
